--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -1,10 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/gridItem"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:numColumns="2"
-    android:padding="8dp"
-    android:verticalSpacing="8dp"
-    android:horizontalSpacing="8dp"/>
+    android:padding="8dp">
+
+    <!-- FILTER ROW -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <!-- SEARCH -->
+        <EditText
+            android:id="@+id/etSearch"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="3"
+            android:autofillHints=""
+            android:hint="@string/cari_item"
+            android:inputType="text"
+            android:paddingHorizontal="12dp"
+            android:background="@drawable/bg_input_rounded"
+            android:maxLines="1"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="8dp"/>
+
+        <!-- SPACE -->
+        <Space
+            android:layout_width="8dp"
+            android:layout_height="1dp"/>
+
+        <!-- CATEGORY WRAPPER -->
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="2"
+            android:background="@drawable/bg_input_rounded"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp">
+
+            <!-- SPINNER ASLI (TRANSPARAN) -->
+            <Spinner
+                android:id="@+id/spCategory"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"/>
+
+            <!-- ARROW MANUAL -->
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_arrow_drop_down"
+                android:importantForAccessibility="no"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <!-- GRID ITEM -->
+    <GridView
+        android:id="@+id/gridItem"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:numColumns="2"
+        android:verticalSpacing="8dp"
+        android:horizontalSpacing="8dp"
+        android:layout_marginTop="24dp"/>
+
+</LinearLayout>
