--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -25,8 +25,11 @@
             android:paddingHorizontal="12dp"
             android:background="@drawable/bg_input_rounded"
             android:maxLines="1"
+            android:textColor="@color/text_primary"
+            android:textColorHint="@color/text_hint"
             android:drawableStart="@drawable/ic_search"
-            android:drawablePadding="8dp"/>
+            android:drawablePadding="8dp"
+            />
 
         <!-- SPACE -->
         <Space
@@ -35,18 +38,19 @@
 
         <!-- CATEGORY WRAPPER -->
         <FrameLayout
-            android:layout_width="0dp"
+            android:layout_width="50dp"
             android:layout_height="48dp"
             android:layout_weight="2"
             android:background="@drawable/bg_input_rounded"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp">
+            android:paddingTop="0dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp">
 
             <!-- SPINNER ASLI (TRANSPARAN) -->
             <Spinner
                 android:id="@+id/spCategory"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="48dp"
                 android:background="@android:color/transparent"/>
 
             <!-- ARROW MANUAL -->
