--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,10 +2,13 @@
 <resources>
     <color name="ic_launcher_background">#FFFFFF</color>
 
+    <color name="text_primary">#212121</color>      <!-- hampir hitam -->
+    <color name="text_hint">#757575</color>         <!-- abu-abu aman -->
+
     <color name="transparent">#00FFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#2196F3</color>
+    <color name="blue">#000000</color>
     <color name="error">#B3261E</color>
 
 </resources>
